provided users to add custom tags

--- a/data/saved_tasks.json
+++ b/data/saved_tasks.json
@@ -4,20 +4,31 @@
     "duration": 1,
     "priority": 5,
     "type": "Health",
-    "energy": "high"
+    "energy": "high",
+    "tags": [
+      "outdoor"
+    ]
   },
   {
     "name": "Study",
     "duration": 3,
     "priority": 4,
     "type": "Study",
-    "energy": "medium"
+    "energy": "medium",
+    "tags": [
+      "online",
+      "indoor",
+      "deep work"
+    ]
   },
   {
     "name": "Cook",
     "duration": 2,
     "priority": 3,
     "type": "Work",
-    "energy": "low"
+    "energy": "low",
+    "tags": [
+      "fun"
+    ]
   }
 ]
